# quotai

./: .editorconfig  .gitignore  AGENTS.md  Makefile  README.md  index.html  pyproject.toml  quotai-archive-keyring.asc  quotai-archive-keyring.fingerprint.txt  quotai-archive-keyring.gpg  quotai.py  website-metadata.json
.github/: dependabot.yml  release-drafter.yml  repository-labels.json
.github/assets/website/: index.html  main.js  package-lock.json  package.json  style.css  vite.config.js
.github/assets/website/scripts/: check.mjs
.github/workflows/: automated-release.yml  automation-auto-merge.yml  build-and-validate.yml  deploy-pages-site.yml  promote-release.yml  publish-apt-repository.yml  publish-homebrew-formula.yml  release-assets.yml  release-drafter.yml
assets/: index-B7O0jqY6.js  index-Cfu-lEfm.js  index-DOAUZ4ds.css  index-W7TU8ULg.css  index-bQh0Dxuw.css
debian/: changelog  control  copyright  docs  gbp.conf  quotai.1  quotai.manpages  rules
dists/stable/: InRelease  Release  Release.gpg
dists/stable/main/binary-all/: Packages  Packages.xz
dists/stable/main/source/: Sources  Sources.xz
docs/: README.md  release.md  usage.md
homebrew/: quotai.rb
pool/main/q/quotai/: quotai_1.1.0-1.debian.tar.xz  quotai_1.1.0-1.dsc  quotai_1.1.0-1_all.deb
scripts/: build-apt-repository.sh  check-version-consistency.sh  generate-release-notes.sh  generate-website-highlights.sh  next-release.sh  prepare-debian-changelog.sh  update-debian-changelog.sh  update-release-metadata.sh  wait-for-tag-workflow-runs.sh
tests/: test_quotai.py
